chore: provide GITHUB_TOKEN to our testing environment

--- a/platform/local/docker-compose.yml
+++ b/platform/local/docker-compose.yml
@@ -13,3 +13,4 @@ services:
       - "../../source:/source"
     environment:
       ACTION_SOURCE_DIR: /source/rootfs
+      GITHUB_TOKEN: $GITHUB_TOKEN
