chore: import addons within github mod and enable debugging feature

--- a/platform/local/Dockerfile
+++ b/platform/local/Dockerfile
@@ -6,7 +6,7 @@
 
 FROM bats/bats:latest as test
 
-RUN apk add curl vim git github-cli
+RUN apk add curl vim git github-cli tree
 
 RUN git clone https://github.com/bats-core/bats-support $HOME/.bats/test_helper/bats-support
 RUN git clone https://github.com/bats-core/bats-assert  $HOME/.bats/test_helper/bats-assert
